@@ -40,7 +40,6 @@
 #define MCE_INVALID_MODE	"invalid"	/* should *never* occur! */
 
 
-
 #include "osso-internal.h"
 #include "osso-hw.h"
 
@@ -50,21 +49,22 @@ osso_return_t osso_display_state_on(osso_context_t *osso)
   dbus_bool_t b;
   
   if (osso->sys_conn == NULL) {
-    ULOG_ERR_F("error: no sys D-BUS connection!");
+    ULOG_ERR_F("error: no system bus connection");
     return OSSO_ERROR;
   }
   msg = dbus_message_new_method_call(MCE_SERVICE, MCE_REQUEST_PATH,
 				     MCE_REQUEST_IF, MCE_DISPLAY_ON_REQ);
-  if (msg == NULL)
-    {
-      return OSSO_ERROR;
-    }
+  if (msg == NULL) {
+    ULOG_ERR_F("could not create message");
+    return OSSO_ERROR;
+  }
 
   b = dbus_connection_send(osso->sys_conn, msg, NULL);
-  if (!b)
-    {
-      return OSSO_ERROR;
-    }
+  if (!b) {
+    ULOG_ERR_F("dbus_connection_send() failed");
+    dbus_message_unref(msg);
+    return OSSO_ERROR;
+  }
   dbus_connection_flush(osso->sys_conn);
   dbus_message_unref(msg);
   return OSSO_OK;
@@ -81,49 +81,99 @@ osso_return_t osso_display_blanking_pause(osso_context_t *osso)
   }
   msg = dbus_message_new_method_call(MCE_SERVICE, MCE_REQUEST_PATH,
 				     MCE_REQUEST_IF, MCE_PREVENT_BLANK_REQ);
-  if (msg == NULL)
-    {
-      return OSSO_ERROR;
-    }
+  if (msg == NULL) {
+    ULOG_ERR_F("could not create message");
+    return OSSO_ERROR;
+  }
 
   b = dbus_connection_send(osso->sys_conn, msg, NULL);
-  if (!b)
-    {
-      return OSSO_ERROR;
-    }
+  if (!b) {
+    ULOG_ERR_F("dbus_connection_send() failed");
+    dbus_message_unref(msg);
+    return OSSO_ERROR;
+  }
   dbus_connection_flush(osso->sys_conn);
   dbus_message_unref(msg);
   return OSSO_OK;
 }
+#if 0
+#define _set_state_cb(hwstate, cb_f, data_p) do {\
+        if(state->hwstate) { \
+          osso->hw->hwstate.cb = cb_f; \
+          osso->hw->hwstate.data = data_p; \
+          osso->hw->hwstate.set = TRUE; \
+          if (!osso->hw->hwstate.set && osso->hw_state->hwstate) { \
+            (cb)(&temp, data); \
+          } \
+          dbus_bus_add_match(osso->sys_conn, "type='signal',interface='" \
+          MCE_SIGNAL_IF "',member='"#hwstate"'" \
+                  , NULL); \
+         dbus_connection_flush(osso->sys_conn); \
+        } \
+}while(0)
+static void _set_state_cb(osso_context_t *osso, _osso_hw_cb_data_t *field,
+                          gboolean set, gboolean curr_state,
+                          const osso_hw_cb_f *cb,
+                          const gpointer data)
+{
+    g_assert(osso != NULL);
+    if (set) {
+        field->cb = cb;
+        field->data = data;
+        field->set = TRUE;
+        if (curr_state) {
+            (*cb)(TODO, data);
+        } 
+        dbus_bus_add_match(osso->sys_conn, "type='signal',interface='"
+                           MCE_SIGNAL_IF "',member='"#hwstate"'", NULL);
+         
+    }
+}
+#endif
 
 osso_return_t osso_hw_set_event_cb(osso_context_t *osso,
 				   osso_hw_state_t *state,
 				   osso_hw_cb_f *cb, gpointer data)
 {
-    osso_hw_state_t temp = {TRUE,TRUE,TRUE,TRUE,1};
-    if( (osso == NULL) || (cb == NULL) )
+    static const osso_hw_state_t default_mask = {TRUE,TRUE,TRUE,TRUE,1};
+    if (osso == NULL || cb == NULL) {
+	ULOG_ERR_F("invalid parameters");
 	return OSSO_INVALID;
+    }
     if (osso->sys_conn == NULL) {
-	ULOG_ERR_F("error: no D-BUS connection!");
+	ULOG_ERR_F("error: no system bus connection");
 	return OSSO_INVALID;
     }
 
-    dprint("state = %p", state);
-    if(state == NULL)
-	state = &temp;
-    dprint("state = %p", state);
+    if (state == NULL) {
+	state = &default_mask;
+    }
 
-    osso->hw_state = _osso_hw_state_get();
+    _osso_hw_state_get(osso);
 
     /* Now set the HW state / add monitoring if requested */
     
-    _set_state_cb(shutdown_ind, cb, data);
+    if (state->shutdown_ind) {
+        osso->hw_cbs.shutdown_ind.cb = cb;
+        osso->hw_cbs.shutdown_ind.data = data;
+        if (!osso->hw_cbs.shutdown_ind.set) {
+            /* if callback was not previously registered, add match */
+            dbus_bus_add_match(osso->sys_conn, "type='signal',interface='"
+                MCE_SIGNAL_IF "',member='shutdown_ind'", NULL);
+        }
+        osso->hw_cbs.shutdown_ind.set = TRUE;
+    }
+
+        /*
     _set_state_cb(memory_low_ind, cb, data);
     _set_state_cb(save_unsaved_data_ind, cb, data);
     _set_state_cb(system_inactivity_ind, cb, data);
     _set_state_cb(sig_device_mode_ind, cb, data);
+    */
     _msg_handler_set_cb_f(osso, MCE_SIGNAL_IF, _hw_handler, state,
 			  FALSE);
+    /* TODO: kutsu callbackia */
+    dbus_connection_flush(osso->sys_conn);
 
     return OSSO_OK;    
 }
@@ -132,10 +182,12 @@ osso_return_t osso_hw_unset_event_cb(osso_context_t *osso,
 				     osso_hw_state_t *state)
 {
     osso_hw_state_t temp = {TRUE,TRUE,TRUE,TRUE,1};
-    if( osso == NULL )
+    if (osso == NULL) {
+	ULOG_ERR_F("invalid parameters");
 	return OSSO_INVALID;
+    }
     if (osso->sys_conn == NULL) {
-	ULOG_ERR_F("error: no D-BUS connection!");
+	ULOG_ERR_F("error: no system bus connection");
 	return OSSO_INVALID;
     }
 
@@ -157,39 +209,36 @@ osso_return_t osso_hw_unset_event_cb(osso_context_t *osso,
     return OSSO_OK;    
 }
 
-static osso_hw_state_t * _osso_hw_state_get(void)
+static void _osso_hw_state_get(osso_context_t *osso)
 {
     FILE *f;
     gchar storedstate[STORED_LEN];
-    osso_hw_state_t *state = NULL;
     
-    state = (osso_hw_state_t*)malloc(sizeof(osso_hw_state_t));
-    if(state == NULL) return NULL;
+    g_assert(osso != NULL);
     
     f = fopen(OSSO_DEVSTATE_MODE_FILE, "r");
     if(f != NULL) {
       if (fgets(storedstate, STORED_LEN, f) != NULL) {
 	
 	  if (strcmp(storedstate, MCE_NORMAL_MODE) == 0) {
-	    state->sig_device_mode_ind = OSSO_DEVMODE_NORMAL;
+	    osso->hw.sig_device_mode_ind = OSSO_DEVMODE_NORMAL;
 	  }
 	  else if (strcmp(storedstate, MCE_FLIGHT_MODE) == 0) {
-	    state->sig_device_mode_ind = OSSO_DEVMODE_FLIGHT;
+	    osso->hw.sig_device_mode_ind = OSSO_DEVMODE_FLIGHT;
 	  }
 	  else if (strcmp(storedstate, MCE_OFFLINE_MODE) == 0) {
-	    state->sig_device_mode_ind = OSSO_DEVMODE_OFFLINE;
+	    osso->hw.sig_device_mode_ind = OSSO_DEVMODE_OFFLINE;
 	  }
 	  else if (strcmp(storedstate, MCE_INVALID_MODE) == 0) {
-	    state->sig_device_mode_ind = OSSO_DEVMODE_INVALID;
+	    osso->hw.sig_device_mode_ind = OSSO_DEVMODE_INVALID;
 	  }
       }
       fclose(f);
     }
-    /* If no state is defined, we assume that everything's "normal" */
-    else
-      state->sig_device_mode_ind = OSSO_DEVMODE_NORMAL;
-    
-    return state;
+    else {
+      ULOG_ERR_F("no device state file found, assuming NORMAL device state");
+      osso->hw.sig_device_mode_ind = OSSO_DEVMODE_NORMAL;
+    }
 }
 
 static DBusHandlerResult _hw_handler(osso_context_t *osso,
